--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ psycopg2-binary
 pandasai
 langchain-groq
 openai
+pandasai-google
+pandasai-openai
 
 # Visualization
 matplotlib
@@ -23,8 +25,6 @@ streamlit
 # LLM and NLP
 transformers
 torch
-google-gemini
-
 
 # Optional but recommended
 python-dotenv
